[package]
name = "rust-media-license-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-cloudfront = "0.27.0"
axum = "0.6.18"
axum-macros = "0.3.7"
cloudfront_sign = "0.2.1"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
